fix: fixed date overlap with education

--- a/assets/css/education.css
+++ b/assets/css/education.css
@@ -573,7 +573,7 @@ blockquote {
 
 .date {
   background: #FF4081;
-  display: inline-block;
+  display: block;
   color: #FFFFFF;
   padding: 10px;
   position: absolute;
